phantomjs (1.6.0-2) UNRELEASED; urgency=low

  * Bump Standards-Version to 3.9.3. 
  * debian/rules: add hardening options. 

 -- TANIGUCHI Takaki <takaki@debian.org>  Sun, 01 Jul 2012 09:46:16 +0900

phantomjs (1.6.0-1) unstable; urgency=low

  * New upstream (Closes: #666397)
  * Drop python-pyphantomjs. It has been removed from upstream.

 -- TANIGUCHI Takaki <takaki@debian.org>  Sun, 01 Jul 2012 02:50:03 +0900

phantomjs (1.4.1+dfsg-1) unstable; urgency=low

  * Imported Upstream version 1.4.1

 -- TANIGUCHI Takaki <takaki@debian.org>  Fri, 10 Feb 2012 10:24:27 +0900

phantomjs (1.4.0+dfsg-1) unstable; urgency=low

  * New upstream 
  * debian/patches/0001-build-with-libjs-coffeesciprt.patch: Follow
    upstream changes.

 -- TANIGUCHI Takaki <takaki@debian.org>  Tue, 27 Dec 2011 22:56:20 +0900

phantomjs (1.3.0+dfsg-4) unstable; urgency=low

  * debian/patches/0001-build-with-libjs-coffeesciprt.patch: Fixed
    coffee-script.js path. (Closes: #651171)

 -- TANIGUCHI Takaki <takaki@debian.org>  Tue, 06 Dec 2011 22:37:13 +0900

phantomjs (1.3.0+dfsg-3) unstable; urgency=low

  * debian/control: Add python-qt4 to Depends (Closes: #648409)

 -- TANIGUCHI Takaki <takaki@debian.org>  Tue, 15 Nov 2011 11:31:06 +0900

phantomjs (1.3.0+dfsg-2) unstable; urgency=low

  * debian/watch: improve pattern to return correct value.

 -- TANIGUCHI Takaki <takaki@debian.org>  Tue, 01 Nov 2011 09:16:37 +0900

phantomjs (1.3.0+dfsg-1) unstable; urgency=low

  * Initial release (Closes: #646556)

 -- TANIGUCHI Takaki <takaki@debian.org>  Tue, 25 Oct 2011 15:13:08 +0900