@@ -3,13 +3,20 @@ Section: web
 Priority: extra
 Maintainer: TANIGUCHI Takaki <takaki@debian.org>
 Build-Depends: debhelper (>= 7.0.50~),
-	qt4-qmake, 
-	libqt4-dev,
-	libqtwebkit-dev, 
-	python-setuptools,
-	python-support,
-	python-all-dev,
+#	qt4-qmake, 
+#	libqt4-dev,
+#	libqtwebkit-dev, 
+#	python-setuptools,
+#	python-support,
+#	python-all-dev,
 	libjs-coffeescript
+	, libfreetype6-dev
+	, libjpeg-dev
+	, libpng-dev
+	, libsqlite3-dev
+	, libssl-dev
+	, libz-dev
+	, libfontconfig1-dev
 Standards-Version: 3.9.3
 Homepage: http://www.phantomjs.org/
 Vcs-Git: git://git.debian.org/collab-maint/phantomjs.git
